fixed proxy configurations
git-svn-id: http://code.jaspersoft.com/svn/repos/jaspersoftstudio/trunk@5551 6833c83e-4fd0-4c68-a3df-283c6148db30